# Friday-

./: .env.example  .gitignore  CLAUDE.md  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.github/workflows/: ci.yml  deploy-pages.yml  netlify.yml  pages.yml
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  README.md  tauri.conf.json
apps/desktop/src-tauri/icons/: README.md
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/boot/: BootSequence.tsx
apps/desktop/src/command-center/: CommandCenter.tsx
apps/desktop/src/core/: ambient.ts  bridge.ts  eventBus.ts  nlu.ts  orchestrator.ts  store.ts  theme.ts  types.ts  workspaces.ts  worlds.ts
apps/desktop/src/hud/: HUD.tsx  ModuleRail.tsx  OrbitalDeck.tsx  WaveBars.tsx
docs/: ARCHITECTURE.md  DESIGN_SYSTEM.md  ROADMAP.md  VISION.md
public/models/: README.md
scripts/: generate-assets.mjs
services/core/: .env.example  requirements.txt
services/core/friday/: __init__.py  config.py  db.py  events.py  main.py
src/app/: ClientExperience.tsx  globals.css  layout.tsx  manifest.ts  page.tsx  robots.ts  sitemap.ts
src/components/: Experience.tsx
src/components/canvas/: Effects.tsx  GLBWatch.tsx  Particles.tsx  Scene.tsx  Watch.tsx  WatchModel.tsx
src/components/sections/: Sections.tsx
src/components/ui/: CommandPalette.tsx  DevPanel.tsx  Hud.tsx  Loader.tsx
src/lib/: audio.ts  constants.ts  hooks.ts  store.ts
src/shaders/: materials.ts
(+36 files in other folders)
